force-app/main/default/objects/AccountPlan__c.object
<CustomObject>
    <description>Object to store the all account planning information.</description>
    <fields>
        <fullName>Account__c</fullName>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Account Plans</relationshipLabel>
        <relationshipName>Account_Plans</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>FiscalYear__c</fullName>
        <label>Fiscal Year</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>FY22</fullName>
                </value>
                <value>
                    <fullName>FY23</fullName>
                </value>
                <value>
                    <fullName>FY24</fullName>
                </value>
                <value>
                    <fullName>FY25</fullName>
                </value>
                <value>
                    <fullName>FY26</fullName>
                </value>
                <value>
                    <fullName>FY27</fullName>
                </value>
                <value>
                    <fullName>FY28</fullName>
                </value>
                <value>
                    <fullName>FY29</fullName>
                </value>
                <value>
                    <fullName>FY30</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>QuipDocumentURL__c</fullName>
        <label>Quip Document URL</label>
        <type>Url</type>
    </fields>
    <label>Account Plan</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Account Plan Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Account Plans</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>